[package]
name = "haruos"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
buddy_system_allocator = "0.1"
riscv = { git = "https://github.com/Hexilee/riscv", features = ["inline-asm"] }