[package]
name = "haruos"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8"
spin = "0.5"
volatile = "0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
